--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,11 +5,17 @@
     android:gravity="center"
     android:orientation="vertical" >
 
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding="24dp"-->
+        <!--android:text="@string/question_text" />-->
+
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:text="@string/question_text" />
+        android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,14 +23,22 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@+id/true_button"/>
+            />
 
         <Button
+            android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@+id/false_button"/>
+            />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button" />
 </LinearLayout>
 
