--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -40,23 +40,23 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/previous_button"
-            android:drawableRight="@drawable/arrow_left"
-            android:drawablePadding="4dp"/>
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:contentDescription="@string/previous_button"
+            android:background="@drawable/arrow_left" />
 
-        <Button
+        <ImageButton
             android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/next_button"
-            android:drawableRight="@drawable/arrow_right"
-            android:drawablePadding="4dp"/>
+            android:layout_width="30dip"
+            android:layout_height="30dip"
+            android:contentDescription="@string/next_button"
+            android:background="@drawable/arrow_right"/>
+
     </LinearLayout>
 
 </LinearLayout>
